starting chat modal. need to fix input and send button alignment

--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@
 	color: white;
 }
 
+@media (min-width: 768px) {
+	.modal-xl {
+	  width: 90%;
+	 max-width:1200px;
+	}
+}
+
 /* .sidebar {
 	position: sticky;
 	top: 0;
